--- a/index.html
+++ b/index.html
@@ -343,8 +343,7 @@
 			</style>
 		</div>
 	</section>
-
-	<div class="progress"></div>
+	<div class="progress"><div></div></div>
 	<script src="shower/shower.min.js"></script>
 </body>
 </html>
