スタイルの修正

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 			<h2>Webアプリケーションの開発</h2>
 			<h3>どんなアプリケーション？</h3>
 			<ul>
-				<li>学生個人の成績をグラフ化</li>
-				<li>登録されたデータを元に成績を解析</li>
+				<li class="next">学生個人の成績をグラフ化</li>
+				<li class="next">登録されたデータを元に成績を解析</li>
 			</ul>
 		</div>
 	</section>
